--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    //"noUnusedParameters": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports":true
   },
