--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gowiny/uni-router",
   "alias": "gowiny-uni-router",
   "exportName": "GowinyUniRouter",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "uniapp vue3 版本的 路由守卫，提供beforeEach 和afterEach 2个守卫",
   "main": "dist/index.global.js",
   "module": "dist/index.esm.js",
@@ -78,13 +78,14 @@
     "babel-jest": "^27.5.1",
     "conventional-changelog-cli": "^2.2.2",
     "dateformat": "^3.0.3",
+    "fs-extra": "^7.0.1",
     "is-buffer": "^2.0.5",
+    "jest": "^27.5.1",
     "nice-try": "^3.0.0",
     "prettier": "^2.6.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.70.1",
     "terser": "^5.12.1",
-    "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
